[project]
name = "KodiDevKit"
requires-python = ">=3.8"

[tool.ruff]
exclude = ["libs/polib", "debug_scripts"]
target-version = "py38"

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"libs/polib/__init__.py" = ["F401", "F403"]
"tests/*.py" = ["E402"]
"tests/scripts/*.py" = ["E402", "F541"]
"typings/*.pyi" = ["F401", "F811"]
